# ocaml-link-shortener

./: .gitignore  dune-project  ocaml_link_shortener.opam  scaffold-db.sh  scaffold.sql
lib/: dune  utils.ml
lib/models/: db.ml  dune  shortenedId.ml  url.ml
test/: dune
